refactor / include list status by files
