# src/presentation/routes/ImportRouters.ts
@@ -1,9 +1,10 @@
 import { Request, Response, Router } from 'express';
-import { ImportFilesControlers } from '../controllers/ImportFilesControlers';
+import { FilesControllers } from '../controllers/FilesControllers';
 import { authMiddleware } from '../middlewares/Auth/authMiddleware';
 import { MulterConfig } from '../middlewares/fileStorage/MulterConfig';
 
-const controller = new ImportFilesControlers()
+const controller = new FilesControllers()
+
 export const router = Router();
 const upload = MulterConfig.getMulterInstance()
 
@@ -21,6 +22,18 @@ router.post('/import', authMiddleware, upload.single('file'), async(req:Request,
   
 });
 
+router.get('/list', upload.single('file'), async(req:Request, res:Response)=>{
+  try {
+  
+    const retorno = await controller.getListStatusFilesUsers(req)
+    
+    res.status(200).json(retorno)  
+  } catch (error) {
+    console.error(error)
+    res.status(400).json({message:error.message|| "An error occurred while logging in."})
+  }
+  
+});
 
 
 
